feat: add get clip
