# docs/swagger.json
@@ -104,6 +104,26 @@
                 }
             }
         },
+        "/clips": {
+            "get": {
+                "description": "Retrieve all clips",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all clips",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_sugar-cat7_vspo-common-api_infrastructure_http_handlers_clip.VideosResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/songs": {
             "get": {
                 "description": "Retrieve all songs",
@@ -118,7 +138,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.VideosResponse"
+                            "$ref": "#/definitions/github_com_sugar-cat7_vspo-common-api_infrastructure_http_handlers_song.VideosResponse"
                         }
                     }
                 }
@@ -187,6 +207,28 @@
         }
     },
     "definitions": {
+        "github_com_sugar-cat7_vspo-common-api_infrastructure_http_handlers_clip.VideosResponse": {
+            "type": "object",
+            "properties": {
+                "videos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/mappers.VideoResponse"
+                    }
+                }
+            }
+        },
+        "github_com_sugar-cat7_vspo-common-api_infrastructure_http_handlers_song.VideosResponse": {
+            "type": "object",
+            "properties": {
+                "videos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/mappers.VideoResponse"
+                    }
+                }
+            }
+        },
         "handlers.ChannelsResponse": {
             "type": "object",
             "properties": {
@@ -194,17 +236,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/mappers.ChannelResponse"
-                    }
-                }
-            }
-        },
-        "handlers.VideosResponse": {
-            "type": "object",
-            "properties": {
-                "videos": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/mappers.VideoResponse"
                     }
                 }
             }
